content/docs/v2022.06.16/reference/cli/vault.md
---
title: Vault
menu:
  docs_v2022.06.16:
    identifier: vault
    name: Vault
    parent: reference-cli
    weight: 0
menu_name: docs_v2022.06.16
section_menu_id: reference
url: /docs/v2022.06.16/reference/cli/
aliases:
- /docs/v2022.06.16/reference/cli/vault/
info:
  cli: v0.8.0
  installer: v2022.06.16
  operator: v0.8.0
  unsealer: v0.8.0
  version: v2022.06.16
---

## vault

KubeVault cli by AppsCode

### Options

```
      --as string                      Username to impersonate for the operation. User could be a regular user or a service account in a namespace.
      --as-group stringArray           Group to impersonate for the operation, this flag can be repeated to specify multiple groups.
      --as-uid string                  UID to impersonate for the operation.
      --cache-dir string               Default cache directory (default "/home/runner/.kube/cache")
      --certificate-authority string   Path to a cert file for the certificate authority
      --client-certificate string      Path to a client certificate file for TLS
      --client-key string              Path to a client key file for TLS
      --cluster string                 The name of the kubeconfig cluster to use
      --context string                 The name of the kubeconfig context to use
  -h, --help                           help for vault
      --insecure-skip-tls-verify       If true, the server's certificate will not be checked for validity. This will make your HTTPS connections insecure
      --kubeconfig string              Path to the kubeconfig file to use for CLI requests.
      --match-server-version           Require server version to match client version
  -n, --namespace string               If present, the namespace scope for this CLI request
      --request-timeout string         The length of time to wait before giving up on a single server request. Non-zero values should contain a corresponding time unit (e.g. 1s, 2m, 3h). A value of zero means don't timeout requests. (default "0")
  -s, --server string                  The address and port of the Kubernetes API server
      --tls-server-name string         Server name to use for server certificate validation. If it is not provided, the hostname used to contact the server is used
      --token string                   Bearer token for authentication to the API server
      --user string                    The name of the kubeconfig user to use
```

### SEE ALSO

* [vault approve](/docs/v2022.06.16/reference/cli/vault_approve)	 - Approve request
* [vault completion](/docs/v2022.06.16/reference/cli/vault_completion)	 - Generate completion script
* [vault deny](/docs/v2022.06.16/reference/cli/vault_deny)	 - Deny request
* [vault generate](/docs/v2022.06.16/reference/cli/vault_generate)	 - Generate secretproviderclass
* [vault merge-secrets](/docs/v2022.06.16/reference/cli/vault_merge-secrets)	 - merge-secrets merges secrets
* [vault revoke](/docs/v2022.06.16/reference/cli/vault_revoke)	 - Revoke request
* [vault root-token](/docs/v2022.06.16/reference/cli/vault_root-token)	 - get, set, delete and sync root-token
* [vault unseal-key](/docs/v2022.06.16/reference/cli/vault_unseal-key)	 - get, set, delete, list and sync unseal-key
* [vault merge-secrets](/docs/v2022.06.16/reference/cli/vault_merge-secrets) - merge two secrets
* [vault version](/docs/v2022.06.16/reference/cli/vault_version)	 - Prints binary version number.

